--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
-Adebanjo Oluwabunmi<o.adebanjo@alustudent.com>
+Adebanjo Oluwabunmi <o.adebanjo@alustudent.com>
+Chibuzor Nino Nwachukwu <c.nwachukwu@alustudent.com>
